{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 33,
  "lineage": "0473dcd7-c942-7872-d5fe-078bdb2f4739",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bf7985b8e29ef4cd",
            "arn": "arn:aws:ec2:us-east-1:650251708506:elastic-ip/eipalloc-0bf7985b8e29ef4cd",
            "association_id": "eipassoc-00f456f3ae89ec754",
            "domain": "vpc",
            "id": "eipalloc-0bf7985b8e29ef4cd",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05210c7d90e36e128",
            "private_dns": "ip-10-0-1-113.ec2.internal",
            "private_ip": "10.0.1.113",
            "public_dns": "ec2-13-217-172-235.compute-1.amazonaws.com",
            "public_ip": "13.217.172.235",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip"
            },
            "tags_all": {
              "Name": "nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:650251708506:internet-gateway/igw-055869f105bdb9081",
            "id": "igw-055869f105bdb9081",
            "owner_id": "650251708506",
            "tags": {
              "Name": "internet-gateway"
            },
            "tags_all": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-02ad52e8241876e02"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bf7985b8e29ef4cd",
            "association_id": "eipassoc-00f456f3ae89ec754",
            "connectivity_type": "public",
            "id": "nat-0e166f55b464ca238",
            "network_interface_id": "eni-05210c7d90e36e128",
            "private_ip": "10.0.1.113",
            "public_ip": "13.217.172.235",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08f592df4a54252e0",
            "tags": {
              "Name": "Nat-gateway"
            },
            "tags_all": {
              "Name": "Nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.dev-eip",
            "aws_subnet.dev-pub",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:650251708506:route-table/rtb-0751a96dac6d04652",
            "id": "rtb-0751a96dac6d04652",
            "owner_id": "650251708506",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-055869f105bdb9081",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT-public"
            },
            "tags_all": {
              "Name": "RT-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ad52e8241876e02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-pvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:650251708506:route-table/rtb-068dee9316f09df7a",
            "id": "rtb-068dee9316f09df7a",
            "owner_id": "650251708506",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e166f55b464ca238",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT-private"
            },
            "tags_all": {
              "Name": "RT-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ad52e8241876e02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.dev-eip",
            "aws_nat_gateway.dev",
            "aws_subnet.dev-pub",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1fbd1e5d03f4763",
            "route_table_id": "rtb-0751a96dac6d04652",
            "subnet_id": "subnet-08f592df4a54252e0"
          },
          "dependencies": [
            "aws_internet_gateway.dev",
            "aws_route_table.dev-pub",
            "aws_subnet.dev-pub",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f799d2bf6fe59faa",
            "route_table_id": "rtb-068dee9316f09df7a",
            "subnet_id": "subnet-05a8596faec99d390"
          },
          "dependencies": [
            "aws_eip.dev-eip",
            "aws_nat_gateway.dev",
            "aws_route_table.dev-pvt",
            "aws_subnet.dev-pub",
            "aws_subnet.dev-pvt-1",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc6b219dbaa8f0c0",
            "route_table_id": "rtb-068dee9316f09df7a",
            "subnet_id": "subnet-064d2d1c60374455d"
          },
          "dependencies": [
            "aws_eip.dev-eip",
            "aws_nat_gateway.dev",
            "aws_route_table.dev-pvt",
            "aws_subnet.dev-pub",
            "aws_subnet.dev-pvt-2",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:650251708506:security-group/sg-0564c806709584561",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0564c806709584561",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20250328121036253500000005",
            "name_prefix": "terraform-",
            "owner_id": "650251708506",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terra-SG"
            },
            "tags_all": {
              "Name": "terra-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ad52e8241876e02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:650251708506:subnet/subnet-08f592df4a54252e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f592df4a54252e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "650251708506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-02ad52e8241876e02"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-pvt-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:650251708506:subnet/subnet-05a8596faec99d390",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a8596faec99d390",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "650251708506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-02ad52e8241876e02"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-pvt-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:650251708506:subnet/subnet-064d2d1c60374455d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064d2d1c60374455d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "650251708506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-02ad52e8241876e02"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:650251708506:vpc/vpc-02ad52e8241876e02",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0edb6a59b92406d81",
            "default_route_table_id": "rtb-01b15f81f5590f519",
            "default_security_group_id": "sg-034c15a094fc69996",
            "dhcp_options_id": "dopt-0a28a149b317c479c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02ad52e8241876e02",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01b15f81f5590f519",
            "owner_id": "650251708506",
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc"
            }
          }
        }
      ]
    }
  ]
}